# Fifteen-puzzle-solver

./: .gitignore  README.md
files_zad1/bfs/: 4x4_01_00001_bfs_drlu_sol.txt  4x4_01_00001_bfs_drlu_stats.txt  4x4_01_00001_bfs_drul_stats.txt  4x4_01_00001_bfs_ludr_stats.txt  4x4_01_00001_bfs_lurd_stats.txt  4x4_01_00001_bfs_rdlu_stats.txt  4x4_01_00001_bfs_rdul_stats.txt  4x4_01_00001_bfs_uldr_stats.txt  4x4_01_00001_bfs_ulrd_stats.txt  4x4_01_00002_bfs_drlu_stats.txt  4x4_01_00002_bfs_drul_stats.txt  4x4_01_00002_bfs_ludr_stats.txt  4x4_01_00002_bfs_lurd_stats.txt  4x4_01_00002_bfs_rdul_stats.txt  4x4_01_00002_bfs_uldr_stats.txt  4x4_01_00002_bfs_ulrd_stats.txt  4x4_02_00001_bfs_drlu_stats.txt  4x4_02_00001_bfs_drul_stats.txt  4x4_02_00001_bfs_ludr_stats.txt  4x4_02_00001_bfs_lurd_stats.txt  4x4_02_00001_bfs_rdlu_sol.txt  4x4_02_00001_bfs_rdlu_stats.txt  4x4_02_00001_bfs_rdul_stats.txt  4x4_02_00001_bfs_uldr_stats.txt  4x4_02_00001_bfs_ulrd_stats.txt  4x4_02_00002_bfs_drlu_stats.txt  4x4_02_00002_bfs_drul_stats.txt  4x4_02_00002_bfs_ludr_stats.txt  4x4_02_00002_bfs_lurd_stats.txt  4x4_02_00002_bfs_rdlu_stats.txt  4x4_02_00002_bfs_rdul_stats.txt  4x4_02_00002_bfs_uldr_sol.txt  4x4_02_00002_bfs_uldr_stats.txt  4x4_02_00002_bfs_ulrd_stats.txt  4x4_02_00003_bfs_drlu_stats.txt  4x4_02_00003_bfs_drul_stats.txt  4x4_02_00003_bfs_ludr_stats.txt  4x4_02_00003_bfs_lurd_sol.txt  4x4_02_00003_bfs_lurd_stats.txt  4x4_02_00003_bfs_rdlu_stats.txt  (+3631 more)
zad1/: CMakeLists.txt  auto_call.ps1  extra_info.cpp  extra_info.h  info_handler.cpp  notatki z lekcji.txt  start_state.txt  todo.txt  zad1.cpp  zad1.sln  zad1.vcxproj  zad1.vcxproj.filters  zadanie_1.txt
zad1 - visual/: info_handler.h  zad1.vcxproj
zad1 - visual/Debug tests/: zad1.vcxproj.FileListAbsolute.txt
zad1 - visual/Debug tests/zad1.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.read.1.tlog  zad1.lastbuildstate
zad1 - visual/tests/zad1.tlog/: CL.read.1.tlog  zad1.lastbuildstate
zad1/Debug tests/: zad1.exe.recipe
zad1/Debug tests/zad1.tlog/: CL.read.1.tlog  link.command.1.tlog  link.write.1.tlog
zad1/automated_call/: CMakeLists.txt  analiza.txt  main.cpp
zad1/files/: extra_info.txt  extra_info_15.txt  solution.txt  solution_15.txt  start_state.txt  start_state_15.txt
zad1/puzzle_solver/: CMakeLists.txt  main.cpp
zad1/puzzle_solver/lib/: file_start_state.h  includes.h  manager.h  strategies.h
zad1/puzzle_solver/lib/file/: file_end_state.h  file_handler.h  file_info.h  file_solution.h  file_start_state.h
zad1/puzzle_solver/lib/info/: info_bundle.h  timer.h
zad1/puzzle_solver/lib/puzzle/: astr_compare.h  board.h  board4x4.h  boardAdapter.h  boardNxN.h  board_handler.h  board_hash.h  f_and_state.cpp  f_and_state.h  f_and_state_comparator.cpp  f_and_state_comparator.h  heuristics.h  op_path.h  state_astr.h
zad1/puzzle_solver/lib/strategy/: bfs.h
zad1/puzzle_solver/lib/util/: astr_priority_queue.h
zad1/puzzle_solver/src/: file_start_state.cpp  manager.cpp  strategies.cpp
zad1/puzzle_solver/src/file/: file_end_state.cpp  file_handler.cpp  file_info.cpp  file_solution.cpp  file_start_state.cpp
zad1/puzzle_solver/src/info/: info_bundle.cpp  timer.cpp
zad1/puzzle_solver/src/puzzle/: board.cpp  board4x4.cpp  boardAdapter.cpp  boardNxN.cpp  board_handler.cpp  heuristics.cpp  op_path.cpp  state_astr.cpp
zad1/puzzle_solver/src/strategy/: bfs.cpp
zad1/puzzle_solver/src/util/: astr_priority_queue.cpp
zad1/scripts/: extdata.ps1  runprog.ps1  runval.ps1
zad1/tests/zad1.tlog/: CL.command.1.tlog  CL.write.1.tlog
